--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "@types/react-scroll": "^1.8.3",
+    "firebase": "^9.1.3",
     "mini-apiclient": "^0.0.4",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebase-auth": "^1.0.3",
     "react-ga": "^3.3.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
