--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-jss": "^10.8.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.4",
