--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react-scroll": "^1.8.3",
     "firebase": "^9.1.3",
     "mini-apiclient": "^0.0.4",
-    "normalize.css": "^8.0.1",
+    "normalize-css.ts": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.8.2",
