add new package

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize-css.ts": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-freeze": "^1.0.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.14",
     "@welldone-software/why-did-you-render": "^6.2.3"
