--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize-css.ts": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-insta-stories": "^2.3.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
