--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-scroll": "^1.8.3",
     "firebase": "^9.6.7",
+    "i18next": "^21.6.14",
     "mini-apiclient": "^0.0.4",
     "normalize-css.ts": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.6",
     "react-insta-stories": "^2.3.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.2",
