--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-scroll": "^1.8.3",
     "firebase": "^9.6.7",
     "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "mini-apiclient": "^0.0.4",
     "normalize-css.ts": "^0.0.2",
     "react": "^17.0.2",
