--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "folio.v2",
   "version": "0.1.0",
+  "license": "CC0-1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
