--- a/package.json
+++ b/package.json
@@ -58,11 +58,12 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.5.1"
+    "eslint-plugin-react": "^7.29.4",
+    "prettier": "^2.6.0"
   }
 }
