--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^11.18.3",
     "react-insta-stories": "^2.4.2",
     "react-modal": "^3.15.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
