--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "sass": "sass --watch styles:public/css --style=compressed"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "graphql": "^16.6.0",
     "next": "12.2.4",
     "normalize-css.ts": "^0.0.2",
     "normalize.css": "^8.0.1",
