--- a/package.json
+++ b/package.json
@@ -1,37 +1,25 @@
 {
-  "name": "shota-next",
+  "name": "shotach",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "sass": "sass --watch styles:public/css --style=compressed"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.4",
-    "graphql": "^16.6.0",
-    "next": "^13.1.4",
-    "normalize-css.ts": "^0.0.2",
-    "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-insta-stories": "^2.4.2",
-    "react-modal": "^3.16.1",
-    "styled-components": "^5.3.6"
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.5.1",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-modal": "^3.13.1",
-    "@types/styled-components": "^5.1.26",
-    "eslint": "^8.32.0",
-    "eslint-config-next": "^13.1.4",
-    "prettier": "^2.8.3",
-    "sass": "^1.57.1",
-    "typescript": "^4.9.4"
+    "sass": "^1.62.1"
   }
 }
