--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.0",
     "autoprefixer": "^10.4.14",
     "sass": "^1.62.1"
   }
