--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
-    "@notionhq/client": "^2.2.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "microcms-js-sdk": "^2.5.0",
+    "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/react-modal": "^3.16.0",
     "autoprefixer": "^10.4.14",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "vercel": "^30.2.3"
   }
 }
