--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "@headlessui/react": "^1.7.16",
+    "@types/node": "^20.4.6",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
     "microcms-js-sdk": "^2.5.0",
-    "next": "^13.4.7",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.12",
+    "postcss": "^8.4.27",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/react-modal": "^3.16.0",
     "autoprefixer": "^10.4.14",
-    "sass": "^1.62.1",
-    "vercel": "^30.2.3"
+    "sass": "^1.64.2",
+    "vercel": "^31.2.2"
   }
 }
