--- a/package.json
+++ b/package.json
@@ -1,34 +1,24 @@
 {
-  "name": "shotach",
+  "name": "shota-folio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@types/node": "^20.12.2",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.4",
-    "microcms-js-sdk": "^3.1.0",
-    "next": "^14.1.4",
-    "postcss": "^8.4.38",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.3"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.3",
-    "autoprefixer": "^10.4.19",
-    "sass": "^1.72.0",
-    "vercel": "^33.6.2"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
