--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "jsdom": "^24.1.0",
+    "lucide-react": "^0.400.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
