--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "shota-folio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": ">= 1.22.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn')===-1) throw new Error('Please use Yarn instead of NPM to install dependencies. See: https://yarnpkg.com/getting-started/install')\""
   },
   "dependencies": {
     "jsdom": "^24.1.0",
